# hsd-fortran

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  ford.md  fpm.toml
.github/workflows/: ci.yml  docs.yml  lint.yml  tests.yml
build-ifx/: error_out.txt  formatter_output.hsd  test_cyc_a_cov.hsd  test_cyc_b_cov.hsd  test_dftb_programmatic.hsd  test_dftb_roundtrip.hsd  test_dump_anon_multi.hsd  test_dump_anon_single.hsd  test_dump_default_type.hsd  test_dump_empty_string.hsd  test_dump_tag_multiline.hsd  test_dump_unnamed_multi.hsd  test_dump_unnamed_tbl_tbl.hsd  test_dump_val_attrib.hsd  test_err_in_block.hsd  test_err_in_nested.hsd  test_hsd_inc.hsd  test_hsd_inc_content.hsd  test_multiline_dump.hsd  test_push_a.hsd  test_push_b.hsd  test_push_c.hsd  test_ragged_int.hsd  test_self_inc_cov.hsd  test_single_child_tbl.hsd  test_split_nl.hsd  test_text_before_block.hsd  test_text_inc.hsd  test_text_io_err.hsd  test_tinc_append.hsd
build-ifx/example/: matrix_demo  simple_read
build-ifx/test/: build_env.f90
build-ifx/utils/bench/: bench_access  bench_array  bench_copy  bench_lookup  bench_parser
cmake/: hsd-config.cmake.in
docs/: README.rst  api.rst  build_systems.rst  conf.py  error_handling.rst  ford_guide.md  fuzzing.rst  hsd_format.rst  index.rst  installation.rst  requirements.txt  thread_safety.rst  tree_mapping.rst  tree_storage.rst  user_guide.rst
example/: CMakeLists.txt  README.md  config.hsd  config_demo.f90  matrix_demo.f90  matrix_input.hsd  modified_output.hsd  sample_input.hsd  simple_read.f90  visitor_demo.f90  visitor_types.f90
public/: .buildinfo  README.html  api.html  build_systems.html  error_handling.html  fuzzing.html  genindex.html  hsd_format.html  index.html  installation.html  objects.inv  search.html  searchindex.js  thread_safety.html  user_guide.html
public/.doctrees/: README.doctree  api.doctree  build_systems.doctree  environment.pickle  error_handling.doctree  fuzzing.doctree  hsd_format.doctree  index.doctree  installation.doctree  thread_safety.doctree  user_guide.doctree
public/_sources/: api.rst.txt  build_systems.rst.txt  error_handling.rst.txt  hsd_format.rst.txt  index.rst.txt  thread_safety.rst.txt  user_guide.rst.txt
public/_static/: custom.css
src/: CMakeLists.txt  build_env.f90  hsd.f90  hsd_table_ops.f90  hsd_types.f90  hsd_value_ops.f90
src/api/: hsd_access.f90  hsd_accessors.f90  hsd_api.f90  hsd_mutators.f90  hsd_query.f90  hsd_schema.f90  hsd_validation.f90  hsd_visitor.f90  hsd_walk.f90
src/compat/: hsd_compat.f90
src/core/: hsd_build_env.f90  hsd_constants.f90  hsd_error.f90  hsd_hash_table.f90  hsd_utils.f90
src/io/: hsd_formatter.f90  hsd_lexer.f90  hsd_parser.f90  hsd_token.f90
test/: .gitignore  CMakeLists.txt  build_env.f90.in  testapp.f90
test/inputs/: cycle_a.hsd  cycle_b.hsd  dftb_input.hsd  include_txt.hsd  simple.hsd
test/suites/api/: test_access_suite.f90  test_api_suite.f90  test_new_apis_suite.f90  test_schema_suite.f90  test_set_processed_suite.f90  test_tree_utils_suite.f90  test_validation_mutator_coverage_suite.f90
test/suites/compat/: test_compat_suite.f90
test/suites/core/: test_array_suite.f90  test_edge_cases_suite.f90  test_error_paths_suite.f90  test_error_suite.f90  test_hash_table_suite.f90
test/suites/coverage/: count_visitor_mod.f90  test_coverage_gaps_suite.f90  test_coverage_suite.f90  test_deep_coverage_suite.f90  test_extended_coverage_suite.f90  test_file_dump_coverage_suite.f90  test_final_100_coverage_suite.f90  test_final_95_coverage_suite.f90  test_final_coverage_suite.f90  test_final_push_suite.f90  test_full_coverage_suite.f90  test_fuzz_suite.f90  test_laser_coverage_suite.f90  test_remaining_coverage_suite.f90  test_remaining_paths_suite.f90  test_stat_coverage_suite.f90  test_types_edge_coverage_suite.f90  test_ultra_coverage_suite.f90  test_ultra_targeted_coverage_suite.f90
test/suites/io/: test_dftb_integration_suite.f90  test_edge_cases_io_suite.f90  test_file_ops_suite.f90  test_formatter_extended_suite.f90  test_formatter_suite.f90  test_lexer_suite.f90  test_parser_suite.f90
utils/: filter_coverage.py
utils/bench/: CMakeLists.txt  README.md  bench_access.f90  bench_array.f90  bench_copy.f90  bench_lookup.f90  bench_parser.f90
utils/fuzz/: CMakeLists.txt  README.md  fuzz_stdin_driver.f90  hsd.dict
utils/fuzz/corpus/: array.hsd  attrib.hsd  bool.hsd  float.hsd  minimal.hsd  nested.hsd  section.hsd  string.hsd
